--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </ul>
       </div>
     </section> -->
-    <ul>
+    <!-- <ul>
       <li>
         <a href="#"> <i class="icon-airplane"></i>Link 1</a>
       </li>
@@ -265,6 +265,44 @@
       <li>
         <a href="#"><i class="icon-anchor"></i> Link 3</a>
       </li>
-    </ul>
+    </ul> -->
+    <!-- <header class="header">шапка сайту</header>
+    <div class="container">
+      <div class="box">
+        <p class="label">label</p> -->
+    <!-- </div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div>  -->
+    <section class="portfolio">
+      <div class="container">
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <article class="project">
+              <img src="./src/img/IMAGE (2).jpg" alt="" />
+              <p class="project-status">new</p>
+              <h2 class="project-title">House Living Room</h2>
+              <p class="project-description">interior dtsign</p>
+            </article>
+          </li>
+          <li class="portfolio-item">
+            <article class="project">
+              <img src="./src/img/IMAGE.jpg" alt="" />
+              <p class="project-status">new</p>
+              <h2 class="project-title">Ocean View House</h2>
+              <p class="project-description">interior design</p>
+            </article>
+          </li>
+          <li class="portfolio-item">
+            <article class="project">
+              <img src="./src/img/IMAGE (1).jpg" alt="" />
+              <p class="project-status">new</p>
+              <h2 class="project-title">House Dining Area</h2>
+              <p class="project-description">interior design</p>
+            </article>
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
