--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       <div class="box"></div>
       <div class="box"></div>
     </div>  -->
-    <section class="portfolio">
+    <!-- <section class="portfolio">
       <div class="container">
         <ul class="portfolio-list">
           <li class="portfolio-item">
@@ -301,8 +301,16 @@
               <p class="project-description">interior design</p>
             </article>
           </li>
-        </ul>
-      </div>
-    </section>
+        </ul> -->
+    <!-- </div>
+    </section> -->
+    <div class="container">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div>
   </body>
 </html>
