--- a/index.html
+++ b/index.html
@@ -304,13 +304,33 @@
         </ul> -->
     <!-- </div>
     </section> -->
-    <div class="container">
+    <!-- <div class="container">
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-    </div>
+    </div> -->
+    <!-- <button class="btn">Клікни мене</button> -->
+    <!-- <ul class="menu">
+      <li class="menu-item">
+        <a class="menu-link">Блог</a>
+      </li>
+      <li class="menu-item">
+        <a class="menu-link">Профіль</a>
+      </li>
+      <li class="menu-item">
+        <a class="menu-link">Галерея</a>
+      </li>
+    </ul> -->
+    <article class="apple">
+      <div class="apple-photo">
+        <img src="./src/img/vegetables.jpg" alt="" class="apple-img" />
+        <p class="overlay">wow</p>
+      </div>
+      <h2 class="apple-title">Червоні яблука</h2>
+      <p class="apple-status">Ціна 100 яблучок</p>
+    </article>
   </body>
 </html>
