--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/font-icon.css.css" />
+
     <link rel="stylesheet" href="./src/css/style.css" />
     <style></style>
   </head>
@@ -324,13 +330,34 @@
         <a class="menu-link">Галерея</a>
       </li>
     </ul> -->
-    <article class="apple">
+    <!-- <article class="apple">
       <div class="apple-photo">
         <img src="./src/img/vegetables.jpg" alt="" class="apple-img" />
         <p class="overlay">wow</p>
       </div>
       <h2 class="apple-title">Червоні яблука</h2>
       <p class="apple-status">Ціна 100 яблучок</p>
-    </article>
+    </article> -->
+
+    <!-- <div class="container">
+      <div class="block"></div>
+    </div> -->
+    <h1 class="title animate__animated animate__pulse">jdsffjafsfjdjfads</h1>
+    <!-- <div class="container">
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block" data-aos="fade-down-left"></div>
+      <div class="block"></div>
+      <div class="block" data-aos="fade-down-left"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+    </div>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script> -->
   </body>
 </html>
