about sass/scss

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./src/scss/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
@@ -342,7 +343,7 @@
     <!-- <div class="container">
       <div class="block"></div>
     </div> -->
-    <h1 class="title animate__animated animate__pulse">jdsffjafsfjdjfads</h1>
+    <!-- <h1 class="title animate__animated animate__pulse">jdsffjafsfjdjfads</h1> -->
     <!-- <div class="container">
       <div class="block"></div>
       <div class="block"></div>
@@ -359,5 +360,11 @@
     <script>
       AOS.init();
     </script> -->
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi consequatur
+      ducimus optio voluptatibus corporis asperiores odit eveniet ipsa
+      aspernatur. Commodi dignissimos magnam possimus placeat laborum velit
+      aliquid necessitatibus quis eos error autem, ab doloribus.
+    </p>
   </body>
 </html>
