variables snd bem

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./src/scss/main.css" />
+    <link rel="stylesheet" href="./src/css/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
@@ -17,10 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/font-icon.css.css" />
-
-    <link rel="stylesheet" href="./src/css/style.css" />
     <style></style>
   </head>
   <body>
@@ -360,11 +357,46 @@
     <script>
       AOS.init();
     </script> -->
-    <p>
+    <!-- <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi consequatur
       ducimus optio voluptatibus corporis asperiores odit eveniet ipsa
       aspernatur. Commodi dignissimos magnam possimus placeat laborum velit
       aliquid necessitatibus quis eos error autem, ab doloribus.
-    </p>
+    </p> -->
+    <ul class="menu">
+      <li class="item"><a href="" class="item-link">Itmem 1</a></li>
+      <li class="item"><a href="" class="item-link">Itmem 1</a></li>
+    </ul>
+    <header class="header">
+      <div class="container header__container">
+        <a href="#" class="logo">
+          <img class="logo__photo" src="./src/img/bird.webp" alt="Logo" />
+        </a>
+
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link nav__link--active" href="#">kdkdkkdkdk</a>
+            </li>
+            <li class="nav__item"><a class="nav__link" href="#">srfgrg</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">rgswtWR</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <section class="section">
+      <div class="container">
+        <h2 class="section__title">Lorem, ipsum dolor.</h2>
+      </div>
+    </section>
+    <p class="alert">Alert message</p>
+    <p class="alert alert--succes">Succes</p>
+    <p class="alert alert--warning">Warning</p>
+    <p class="alert alert--error">Error</p>
+
+    <footer class="footer">
+      <a href="#" class="logo footer__logo"> </a>
+    </footer>
   </body>
 </html>
