mixins placeholder each

--- a/index.html
+++ b/index.html
@@ -398,5 +398,11 @@
     <footer class="footer">
       <a href="#" class="logo footer__logo"> </a>
     </footer>
+    <!-- <div class="btn-container"> -->
+    <button class="button--tomato">Succes</button>
+    <!-- <button class="button--teal">Error</button>
+      <button class="button--skyblue">Warning</button>
+    </div> -->
+    <!-- <div class="box"></div> -->
   </body>
 </html>
