--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       aspernatur. Commodi dignissimos magnam possimus placeat laborum velit
       aliquid necessitatibus quis eos error autem, ab doloribus.
     </p> -->
-    <ul class="menu">
+    <!-- <ul class="menu">
       <li class="item"><a href="" class="item-link">Itmem 1</a></li>
       <li class="item"><a href="" class="item-link">Itmem 1</a></li>
     </ul>
@@ -397,12 +397,21 @@
 
     <footer class="footer">
       <a href="#" class="logo footer__logo"> </a>
-    </footer>
+    </footer> -->
     <!-- <div class="btn-container"> -->
-    <button class="button--tomato">Succes</button>
+    <!-- <button class="button--tomato">Succes</button> -->
     <!-- <button class="button--teal">Error</button>
       <button class="button--skyblue">Warning</button>
     </div> -->
     <!-- <div class="box"></div> -->
+    <div class="container">
+      <ul class="list">
+        <li class="item"><a href="#" class="link">Link 1</a></li>
+        <li class="item"><a href="#" class="link">Link 2</a></li>
+        <li class="item"><a href="#" class="link">Link 3</a></li>
+        <li class="item"><a href="#" class="link">Link 4</a></li>
+        <li class="item"><a href="#" class="link">Link 5</a></li>
+      </ul>
+    </div>
   </body>
 </html>
