--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
       <button class="button--skyblue">Warning</button>
     </div> -->
     <!-- <div class="box"></div> -->
-    <div class="container">
+    <!-- <div class="container">
       <ul class="list">
         <li class="item"><a href="#" class="link">Link 1</a></li>
         <li class="item"><a href="#" class="link">Link 2</a></li>
@@ -412,6 +412,30 @@
         <li class="item"><a href="#" class="link">Link 4</a></li>
         <li class="item"><a href="#" class="link">Link 5</a></li>
       </ul>
-    </div>
+    </div> -->
+    <header class="header">
+      <div class="container header__container">
+        <a href="#" class="logo">logo</a>
+        <label class="header__menu" for="menu-button">Menu</label>
+        <input class="header__menu-toggle" type="checkbox" id="menu-button" />
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a href="#" class="nav__link">Link 1</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">link 2</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Link 3</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Link 4</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Link 5</a></li>
+          </ul>
+        </nav>
+        <ul class="actions">
+          <li class="actions__item">
+            <a href="#" class="actions__link"> Sing up</a>
+          </li>
+          <li class="actions__item">
+            <a href="#" class="actions__link"> Log in</a>
+          </li>
+        </ul>
+      </div>
+    </header>
   </body>
 </html>
