--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <li class="item"><a href="#" class="link">Link 5</a></li>
       </ul>
     </div> -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <a href="#" class="logo">logo</a>
         <label class="header__menu" for="menu-button">Menu</label>
@@ -436,6 +436,29 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
+    <div class="photo">
+      <!-- <img
+        srcset="./src/img/tablet.jpg 300w, ./src/img/tablet@2x.jpg 900ws"
+        src="./src/img/tablet.jpg"
+        sizes="(min-width:300px) 300px, (min-width:900px) 900px"
+        alt="tablet"
+        class="img"
+        width="378"
+        height="294"
+      /> -->
+      <picture>
+        <source
+          srcset="./src/img/tablet.webp 1x, ./src/img/tablet@2x.webp 2x"
+          type="image/webp"
+        />
+        <source
+          srcset="./src/img/tablet.jpg 1x, ./src/img/tablet@2x.jpg 2x"
+          type="image/jpg"
+        />
+        <img src="./src/img/tablet.jpg" alt="tablet" />
+      </picture>
+    </div>
+    <h2>hello</h2>
   </body>
 </html>
